--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -71,6 +71,23 @@ p {
     font-size: medium;
 }
 
+ul {
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+li {
+    margin-bottom: 8px;
+}
+
+.code-block {
+    display: block;
+    background-color: #f7f7f7;
+    padding: 10px;
+    border-radius: 5px;
+    overflow-x: auto;
+}
+
 footer {
     background-color: #333;
     color: #fff;
