--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -67,7 +67,7 @@ h3 {
 p {
     line-height: 1.6;
     margin-bottom: 15px;
-    font-family: initial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
 }
 
