--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -21,7 +21,7 @@ header {
 }
 
 p {
-    font-family: initial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: large;
     margin: 0;
 }
@@ -62,7 +62,7 @@ h3 {
 
 a {
     color: #007BFF;
-    font-family: initial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: large;
 }
 
