--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz@8..60&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +8,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Source Serif 4', serif;
     background-color: #f0f0f0;
 }
 
@@ -68,7 +70,7 @@ h3 {
 p {
     line-height: 1.6;
     margin-bottom: 15px;
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
     font-size: medium;
 }
 
