--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz@8..60&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
 
 * {
     margin: 0;
@@ -8,12 +8,12 @@
 }
 
 body {
-    font-family: 'Source Serif 4', serif;
+    font-family: 'Tinos', serif;
     background-color: #f0f0f0;
 }
 
 header {
-    background-color: #333;
+    background-color: #009DE0;
     color: #fff;
     text-align: center;
     padding: 10px;
@@ -96,7 +96,7 @@ li {
 }
 
 footer {
-    background-color: #333;
+    background-color: #009DE0;
     color: #fff;
     text-align: center;
     padding: 10px;
