--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #009DE0;
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -67,11 +67,11 @@ a {
 }
 
 a:visited {
-    color: blueviolet;
+    color: black;
 }
 
 footer {
-    background-color: #333;
+    background-color: #009DE0;
     color: #fff;
     text-align: center;
     padding: 10px;
