--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -71,7 +71,7 @@ p {
     line-height: 1.6;
     margin-bottom: 15px;
     /*font-family: Arial, Helvetica, sans-serif;*/
-    font-size: medium;
+    font-size: 19px;
 }
 
 ul {
@@ -81,6 +81,7 @@ ul {
 
 li {
     margin-bottom: 8px;
+    font-size: 19px;
 }
 
 #code-block {
