--- a/src/styles/articles-pdf.css
+++ b/src/styles/articles-pdf.css
@@ -25,7 +25,7 @@ a {
 }
 
 main {
-    max-width: 1300px;
+    max-width: 100%;
     margin: 20px auto;
     background-color: #fff;
     padding: 20px;
